<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <!-- tools:context=".RegistrationActivity" > -->


    <!-- <LinearLayout -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="match_parent" -->
    <!-- android:orientation="vertical" > -->


    <!-- </LinearLayout> -->

    <ScrollView
        android:id="@+id/activity_schildren_profile_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="60dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView_Awatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/baby_default" />

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextText
                    android:id="@+id/textView_nameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_surname"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextText
                    android:id="@+id/textView_surnameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_middlename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_middlename"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextText
                    android:id="@+id/textView_middlenameValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_weight"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextText
                    android:id="@+id/textView_weightValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_growth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_growth"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextText
                    android:id="@+id/textView_growthValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/label_birthdate"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextText
                    android:id="@+id/textView_birthdateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <Button
                android:id="@+id/button_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit" />
        </LinearLayout>
    </ScrollView>

</merge>