<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<!--     tools:context=".RegistrationActivity" > -->

    <!-- <LinearLayout -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="match_parent" -->
    <!-- android:orientation="vertical" > -->


    <!-- </LinearLayout> -->

    <ScrollView
        android:id="@+id/activity_schildren_profile_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="200dp"
            android:orientation="vertical" >

            <LinearLayout
                style="@style/LoginFormContainer"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView_Awatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/baby_default" />

                <ImageButton
                    android:id="@+id/imageButton_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/options" >

<!--                     <LinearLayout -->
<!--                         android:id="@+id/llPhoto" -->
<!--                         android:layout_width="wrap_content" -->
<!--                         android:layout_height="wrap_content" -->
<!--                         android:layout_gravity="center_horizontal" -->
<!--                         android:orientation="horizontal" > -->

<!--                         <ImageButton -->
<!--                         android:id="@+id/imgBtn_photo" -->
<!--                         android:layout_width="30dp" -->
<!--                         android:layout_height="30dp" -->
<!--                         android:padding="5dp" -->
<!--                         android:src="@drawable/camera" /> -->


<!--                         <ImageButton -->
<!--                         android:id="@+id/imgBtn_PickFromGallery" -->
<!--                         android:layout_width="30dp" -->
<!--                         android:layout_height="30dp" -->
<!--                         android:padding="5dp" -->
<!--                         android:src="@drawable/gallery" /> -->
<!--                     </LinearLayout> -->
                </ImageButton>
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surname"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_middlename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/middlename"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_middlename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
              
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_growth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/growth"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/edit_growth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                style="@style/LoginFormContainer"
                android:layout_gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthdate"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <DatePicker
                    android:id="@+id/datePicker_birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/button_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ok" />
        </LinearLayout>
    </ScrollView>

</merge>